# evds-mcp

./: LICENSE  README.md  pyproject.toml
src/evds_mcp/: __init__.py  analysis.py  api.py  cli.py  config.py  server.py
tests/: test_analysis.py  test_api.py  test_config.py  test_server.py
