[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evds-mcp"
dynamic = ["version"]
description = "MCP server for TCMB EVDS API v3 (Turkish Central Bank Electronic Data Delivery System)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "statsmodels>=0.14.0",
    "pmdarima>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
evds-mcp = "evds_mcp.cli:main"

[tool.hatch.version]
path = "src/evds_mcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/evds_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
